--- a/_data/presentations.yaml
+++ b/_data/presentations.yaml
@@ -6,7 +6,7 @@ presentations:
     location: "Moore-Rooker A400"
     leader: "Hugo Sant'Anna"
     title: "Logs with Zeros? Some Problems and Solutions (Chen and Roth, QJE 2023)" 
-    link: https://academic.oup.com/qje/advance-article-abstract/doi/10.1093/qje/qjad054/7473710
+    link: "https://academic.oup.com/qje/advance-article-abstract/doi/10.1093/qje/qjad054/7473710"
 
   - semester: "Spring 2024"
     date: "2024-03-14"
@@ -15,4 +15,4 @@ presentations:
     location: "Moore-Rooker A400"
     leader: "Derek Dyal"
     title: "An IV Model of Quantile Treatment Effects (Chernozhukov and Hansen, ECMA 2005)" 
-    link: https://www.jstor.org/stable/3598944
+    link: "https://www.jstor.org/stable/3598944"
