--- a/_data/presentations.yaml
+++ b/_data/presentations.yaml
@@ -15,3 +15,21 @@
   leader: "Derek Dyal"
   title: "An IV Model of Quantile Treatment Effects (Chernozhukov and Hansen, ECMA 2005)" 
   link: "https://www.jstor.org/stable/3598944"
+
+- semester: "Spring 2024"
+  date: "2024-04-11"
+  start-time: "11:00"
+  end-time: "12:30"
+  location: "Moore-Rooker A400"
+  leader: "TBD"
+  title: "TBD"
+  link: ""
+
+- semester: "Spring 2024"
+  date: "2024-04-25"
+  start-time: "11:00"
+  end-time: "12:30"
+  location: "Moore-Rooker A400"
+  leader: "TBD"
+  title: "TBD"
+  link: ""
