--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -21,15 +21,24 @@
   start-time: "11:00"
   end-time: "12:30"
   location: "Moore-Rooker A400"
-  leader: "TBD"
-  title: "TBD"
-  link: ""
+  leader: "Michael Kotrous"
+  title: "Difference-in-Differences in Equilibrium: Evidence from Place-Based Policies"
+  link: "https://scioteca.caf.com/handle/123456789/2192"
 
 - semester: "Spring 2024"
   date: "2024-04-25"
   start-time: "11:00"
   end-time: "12:30"
   location: "Moore-Rooker A400"
-  leader: "TBD"
-  title: "TBD"
-  link: ""
+  leader: "Hugo Sant'Anna"
+  title: "Introduction to AKM Models (Card, Heining, and Kline, QJE 2013)"
+  link: "https://academic.oup.com/qje/article/128/3/967/1848785"
+
+- semester: "Summer 2024"
+  date: "2024-05-13"
+  start-time: "11:00"
+  end-time: "12:30"
+  location: "TBD"
+  leader: "Stroud Payne"
+  title: "Calculating Semiparametric Efficiency Bounds (Sant'Anna and Zhao, JE 2020)"
+  link: "https://www.sciencedirect.com/science/article/pii/S0304407620301901"
