--- a/_data/seminars.yaml
+++ b/_data/seminars.yaml
@@ -11,13 +11,13 @@
   speaker: "Vitor Possebom"
   affiliation: "Sao Paulo School of Economics"
   host: "Carol Caetano"
-  title: "TBD"
-  link: "TBD"
+  title: "Was Javert right to be suspicious? Unpacking Treatment Effect Heterogeneity of alternative sentences on time-to-recidivism in Brazil"
+  link: "https://arxiv.org/abs/2311.13969"
   
 - semester: "Spring 2024"
   date: "2024-03-28"
   speaker: "Whitney Newey"
   affiliation: "MIT"
   host: "Carol Caetano"
-  title: "TBD"
+  title: "Linear Estimation of Structural and Causal Effects in Non-Separable Panel Data"
   link: "TBD"
