--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -38,7 +38,7 @@
   date: "2024-05-13"
   start-time: "11:00"
   end-time: "12:30"
-  location: "TBD"
+  location: "More-Rooker A400"
   leader: "Stroud Payne"
   title: "Calculating Semiparametric Efficiency Bounds (Sant'Anna and Zhao, JE 2020)"
   link: "https://www.sciencedirect.com/science/article/pii/S0304407620301901"
