--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -1,3 +1,85 @@
+  
+- semester: "Fall 2022"
+  date: "2022-09-16"
+  start-time: "10:30"
+  end-time: "11:30"
+  location: "Moore-Rooker A400"
+  leader: "Raül Santaeulàlia-Llopis"
+  title: "Evaluating the effectiveness of policies against a pandemic"
+  link: "https://bse.eu/file/8577/download?token=za2m4Hte"
+  
+- semester: "Fall 2022"
+  date: "2022-09-22"
+  start-time: "14:30"
+  end-time: "15:30"
+  location: "Moore-Rooker A400"
+  leader: "Hugo Sant'Anna"
+  title: "Synthetic difference-in-differences"
+  link: "https://www.aeaweb.org/articles?id=10.1257/aer.20190159"
+  
+- semester: "Fall 2022"
+  date: "2022-10-20"
+  start-time: "14:30"
+  end-time: "15:30"
+  location: "Moore-Rooker A400"
+  leader: "Brant Callaway"
+  title: "On the implied weights of linear regression for causal inference"
+  link: "https://arxiv.org/pdf/2104.06581.pdf"
+  
+- semester: "Fall 2023"
+  date: "2022-11-10"
+  start-time: "14:30"
+  end-time: "15:30"
+  location: "Moore-Rooker A400"
+  leader: "Carol Caetano"
+  title: "Primer on Bunching Methods for Causal Inference"
+  link: "https://drive.google.com/file/d/1iMAA1hoAU8nfayeY1QhP2SL89b8GqCnZ/view?usp=sharing"
+
+- semester: "Fall 2023"
+  date: "2023-04-26"
+  start-time: "11:30"
+  end-time: "12:30"
+  location: "Ivester E227"
+  leader: "Michael Kotrous"
+  title: "Cluster-robust inference: A guide to empirical practice" 
+  link: "https://www.sciencedirect.com/science/article/pii/S0304407622000781"
+  
+- semester: "Fall 2023"
+  date: "2023-04-27"
+  start-time: "11:30"
+  end-time: "12:30"
+  location: "Moore-Rooker A400"
+  leader: "Brant Callaway"
+  title: "Interpreting regression under treatment effect heterogeneity" 
+  link: ""
+
+- semester: "Fall 2023"
+  date: "2023-09-21"
+  start-time: "11:30"
+  end-time: "12:30"
+  location: "Moore-Rooker A400"
+  leader: "Carol Caetano, Brant Callaway"
+  title: "When is TSLS Actually LATE?" 
+  link: "https://www.nber.org/system/files/working_papers/w29709/w29709.pdf"
+
+- semester: "Fall 2023"
+  date: "2023-09-28"
+  start-time: "11:30"
+  end-time: "12:30"
+  location: "Moore-Rooker A400"
+  leader: "Brant Callaway"
+  title: "Simple Approaches to Nonlinear Difference-in-Differences with Panel Data" 
+  link: "https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4183726"
+
+- semester: "Fall 2023"
+  date: "2023-10-26"
+  start-time: "12:45"
+  end-time: "1:45"
+  location: "Benson Hall C400"
+  leader: "Carol Caetano"
+  title: "Empirical Bayes Deconvolution Estimates." 
+  link: "https://academic.oup.com/biomet/article/103/1/1/2390141"
+
 - semester: "Spring 2024"
   date: "2024-02-08"
   start-time: "11:00"
