--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -26,7 +26,7 @@
   title: "On the implied weights of linear regression for causal inference"
   link: "https://arxiv.org/pdf/2104.06581.pdf"
   
-- semester: "Fall 2023"
+- semester: "Fall 2022"
   date: "2022-11-10"
   start-time: "14:30"
   end-time: "15:30"
@@ -35,7 +35,7 @@
   title: "Primer on Bunching Methods for Causal Inference"
   link: "https://drive.google.com/file/d/1iMAA1hoAU8nfayeY1QhP2SL89b8GqCnZ/view?usp=sharing"
 
-- semester: "Fall 2023"
+- semester: "Spring 2023"
   date: "2023-04-26"
   start-time: "11:30"
   end-time: "12:30"
@@ -44,7 +44,7 @@
   title: "Cluster-robust inference: A guide to empirical practice" 
   link: "https://www.sciencedirect.com/science/article/pii/S0304407622000781"
   
-- semester: "Fall 2023"
+- semester: "Spring 2023"
   date: "2023-04-27"
   start-time: "11:30"
   end-time: "12:30"
