--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -124,3 +124,12 @@
   leader: "Stroud Payne"
   title: "Calculating Semiparametric Efficiency Bounds (Sant'Anna and Zhao, JE 2020)"
   link: "https://www.sciencedirect.com/science/article/pii/S0304407620301901"
+
+  - semester: "Fall 2024"
+  date: "2024-09-13"
+  start-time: "9:30"
+  end-time: "11:00"
+  location: "More-Rooker A400"
+  leader: "Hugo"
+  title: "Calculating Semiparametric Efficiency Bounds (Sant'Anna and Zhao, JE 2020)"
+  link: "https://www.sciencedirect.com/science/article/pii/S0304407620301901"
