--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -126,10 +126,10 @@
   link: "https://www.sciencedirect.com/science/article/pii/S0304407620301901"
 
 - semester: "Fall 2024"
-  date: "2024-09-13"
+  date: "2024-09-99"
   start-time: "9:30"
   end-time: "11:00"
   location: "More-Rooker A400"
-  leader: "Hugo"
-  title: "Calculating Semiparametric Efficiency Bounds (Sant'Anna and Zhao, JE 2020)"
-  link: "https://www.sciencedirect.com/science/article/pii/S0304407620301901"
+  leader: "William Sealy Gosset"
+  title: "The Probable Error of the Mean (STUDENT, Biometrika 1908)"
+  link: "https://www.jstor.org/stable/2331554"
