--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -133,3 +133,30 @@
   leader: "William Sealy Gosset"
   title: "The Probable Error of the Mean (STUDENT, Biometrika 1908)"
   link: "https://www.jstor.org/stable/2331554"
+
+- semester: "Fall 2024"
+  date: "2024-10-99"
+  start-time: "9:30"
+  end-time: "11:00"
+  location: "More-Rooker A400"
+  leader: "William Sealy Gosset"
+  title: "The Probable Error of the Mean (STUDENT, Biometrika 1908)"
+  link: "https://www.jstor.org/stable/2331554"
+
+  - semester: "Fall 2024"
+  date: "2024-11-99"
+  start-time: "9:30"
+  end-time: "11:00"
+  location: "More-Rooker A400"
+  leader: "William Sealy Gosset"
+  title: "The Probable Error of the Mean (STUDENT, Biometrika 1908)"
+  link: "https://www.jstor.org/stable/2331554"
+
+  - semester: "Fall 2024"
+  date: "2024-12-99"
+  start-time: "9:30"
+  end-time: "11:00"
+  location: "More-Rooker A400"
+  leader: "William Sealy Gosset"
+  title: "The Probable Error of the Mean (STUDENT, Biometrika 1908)"
+  link: "https://www.jstor.org/stable/2331554"
