--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -126,37 +126,37 @@
   link: "https://www.sciencedirect.com/science/article/pii/S0304407620301901"
 
 - semester: "Fall 2024"
-  date: "2024-09-99"
-  start-time: "9:30"
-  end-time: "11:00"
-  location: "More-Rooker A400"
-  leader: "William Sealy Gosset"
-  title: "The Probable Error of the Mean (STUDENT, Biometrika 1908)"
-  link: "https://www.jstor.org/stable/2331554"
+  date: "2024-09-13"
+  start-time: "1:30"
+  end-time: "2:30"
+  location: "Orkin D207"
+  leader: "Derek Dyal"
+  title: "Aggregated Treatment"
+  link: "NA"
 
 - semester: "Fall 2024"
-  date: "2024-10-99"
-  start-time: "9:30"
-  end-time: "11:00"
-  location: "More-Rooker A400"
-  leader: "William Sealy Gosset"
-  title: "The Probable Error of the Mean (STUDENT, Biometrika 1908)"
-  link: "https://www.jstor.org/stable/2331554"
+  date: "2024-09-27"
+  start-time: "2:00"
+  end-time: "3:30"
+  location: "Orkin D207"
+  leader: "----"
+  title: "----"
+  link: "NA"
 
 - semester: "Fall 2024"
-  date: "2024-11-99"
-  start-time: "9:30"
-  end-time: "11:00"
-  location: "More-Rooker A400"
-  leader: "William Sealy Gosset"
-  title: "The Probable Error of the Mean (STUDENT, Biometrika 1908)"
-  link: "https://www.jstor.org/stable/2331554"
+  date: "2024-10-18"
+  start-time: "2:00"
+  end-time: "3:30"
+  location: "Orkin D207"
+  leader: "----"
+  title: "----"
+  link: "NA"
 
 - semester: "Fall 2024"
-  date: "2024-12-99"
-  start-time: "9:30"
-  end-time: "11:00"
-  location: "More-Rooker A400"
+  date: "2024-11-08"
+  start-time: "2:00"
+  end-time: "3:30"
+  location: "Orkin D207"
   leader: "William Sealy Gosset"
   title: "The Probable Error of the Mean (STUDENT, Biometrika 1908)"
   link: "https://www.jstor.org/stable/2331554"
