--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -157,6 +157,6 @@
   start-time: "2:00"
   end-time: "3:30"
   location: "Orkin D207"
-  leader: "William Sealy Gosset"
-  title: "The Probable Error of the Mean (STUDENT, Biometrika 1908)"
-  link: "https://www.jstor.org/stable/2331554"
+  leader: "----"
+  title: "----"
+  link: "NA"
