--- a/_data/seminars.yaml
+++ b/_data/seminars.yaml
@@ -1,3 +1,27 @@
+- semester: "Fall 2024"
+  date: "2024-02-22"
+  speaker: "Carlos Lamarche"
+  affiliation: "University of Kentucky"
+  host: "Brant Callaway"
+  title: "Quantile Regression with an Endogenous One-Sided Misclassified Binary Regressor"
+  link: "https://roozbeh-hosseini.github.io/seminar_papers/qrem15_full.pdf"
+
+- semester: "Fall 2024"
+  date: "2024-03-14"
+  speaker: "Vitor Possebom"
+  affiliation: "Sao Paulo School of Economics"
+  host: "Carol Caetano"
+  title: "Was Javert right to be suspicious? Unpacking Treatment Effect Heterogeneity of alternative sentences on time-to-recidivism in Brazil"
+  link: "https://arxiv.org/abs/2311.13969"
+  
+- semester: "Fall 2024"
+  date: "2024-03-28"
+  speaker: "Whitney Newey"
+  affiliation: "MIT"
+  host: "Carol Caetano"
+  title: "Linear Estimation of Structural and Causal Effects in Non-Separable Panel Data"
+  link: "TBD"
+  
 - semester: "Spring 2024"
   date: "2024-02-22"
   speaker: "Carlos Lamarche"
