--- a/_data/seminars.yaml
+++ b/_data/seminars.yaml
@@ -1,21 +1,21 @@
 - semester: "Fall 2024"
-  date: "2024-02-22"
+  date: "2024-09-22"
   speaker: "Carlos Lamarche"
   affiliation: "University of Kentucky"
   host: "Brant Callaway"
   title: "Quantile Regression with an Endogenous One-Sided Misclassified Binary Regressor"
-  link: "https://roozbeh-hosseini.github.io/seminar_papers/qrem15_full.pdf"
+  link: "NA"
 
 - semester: "Fall 2024"
-  date: "2024-03-14"
+  date: "2024-10-14"
   speaker: "Vitor Possebom"
   affiliation: "Sao Paulo School of Economics"
   host: "Carol Caetano"
   title: "Was Javert right to be suspicious? Unpacking Treatment Effect Heterogeneity of alternative sentences on time-to-recidivism in Brazil"
-  link: "https://arxiv.org/abs/2311.13969"
+  link: "NA"
   
 - semester: "Fall 2024"
-  date: "2024-03-28"
+  date: "2024-11-28"
   speaker: "Whitney Newey"
   affiliation: "MIT"
   host: "Carol Caetano"
