--- a/_data/seminars.yaml
+++ b/_data/seminars.yaml
@@ -1,25 +1,25 @@
 - semester: "Fall 2024"
-  date: "2024-09-22"
-  speaker: "Carlos Lamarche"
-  affiliation: "University of Kentucky"
-  host: "Brant Callaway"
-  title: "Quantile Regression with an Endogenous One-Sided Misclassified Binary Regressor"
+  date: "2024-09-21"
+  speaker: ""
+  affiliation: "University"
+  host: ""
+  title: "NA"
   link: "NA"
 
 - semester: "Fall 2024"
   date: "2024-10-14"
-  speaker: "Vitor Possebom"
-  affiliation: "Sao Paulo School of Economics"
-  host: "Carol Caetano"
-  title: "Was Javert right to be suspicious? Unpacking Treatment Effect Heterogeneity of alternative sentences on time-to-recidivism in Brazil"
+  speaker: ""
+  affiliation: "University"
+  host: ""
+  title: "NA"
   link: "NA"
   
 - semester: "Fall 2024"
   date: "2024-11-28"
-  speaker: "Whitney Newey"
-  affiliation: "MIT"
-  host: "Carol Caetano"
-  title: "Linear Estimation of Structural and Causal Effects in Non-Separable Panel Data"
+  speaker: ""
+  affiliation: "University"
+  host: ""
+  title: "NA"
   link: "TBD"
   
 - semester: "Spring 2024"
