--- a/_data/seminars.yaml
+++ b/_data/seminars.yaml
@@ -23,25 +23,41 @@
   link: "TBD"
   
 - semester: "Fall 2024"
-  date: "2024-09-21"
-  speaker: ""
-  affiliation: "University"
-  host: ""
-  title: "NA"
-  link: "NA"
+  date: "2024-09-24"
+  speaker: "Yulong Wang"
+  affiliation: "Syracuse University"
+  host: "Carol Caetano"
+  title: "On the Inconsistency of Cluster-Robust Inference and How Subsampling Can Fix It"
+  link: "https://arxiv.org/abs/2308.10138"
 
 - semester: "Fall 2024"
-  date: "2024-10-14"
-  speaker: ""
-  affiliation: "University"
-  host: ""
-  title: "NA"
-  link: "NA"
+  date: "2024-10-01"
+  speaker: "Davide Viviano"
+  affiliation: "Harvard University"
+  host: "Brant Callaway"
+  title: "TBD"
+  link: "TBD"
   
 - semester: "Fall 2024"
-  date: "2024-11-28"
-  speaker: ""
-  affiliation: "University"
-  host: ""
-  title: "NA"
+  date: "2024-10-08"
+  speaker: "Xiaoxia Shi"
+  affiliation: "University of Wisconsin-Madison"
+  host: "Zhongjian Lin"
+  title: "TBD"
+  link: "TBD"
+
+- semester: "Fall 2024"
+  date: "2024-10-15"
+  speaker: "Rodrigo Pinto"
+  affiliation: "UCLA"
+  host: "Greg Caetano"
+  title: "TBD"
+  link: "TBD"
+
+- semester: "Fall 2024"
+  date: "2024-10-29"
+  speaker: "Shakeeb Khan"
+  affiliation: "Boston College"
+  host: "Brant Callaway"
+  title: "TBD"
   link: "TBD"
