--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -131,31 +131,31 @@
   location: "Orkin D207"
   leader: "Derek Dyal"
   title: "Aggregated Treatment"
-  link: "NA"
+  link: "TBD"
 
 - semester: "Fall 2024"
   date: "2024-09-27"
   start-time: "2:00"
   end-time: "3:30"
   location: "Orkin D207"
-  leader: "----"
-  title: "----"
-  link: "NA"
+  leader: "TBD"
+  title: "TBD"
+  link: "TBD"
 
 - semester: "Fall 2024"
   date: "2024-10-18"
   start-time: "2:00"
   end-time: "3:30"
   location: "Orkin D207"
-  leader: "----"
-  title: "----"
-  link: "NA"
+  leader: "TBD"
+  title: "TBD"
+  link: "TBD"
 
 - semester: "Fall 2024"
   date: "2024-11-08"
   start-time: "2:00"
   end-time: "3:30"
   location: "Orkin D207"
-  leader: "----"
-  title: "----"
-  link: "NA"
+  leader: "TBD"
+  title: "TBD"
+  link: "TBD"
