--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -131,16 +131,16 @@
   location: "Orkin D207"
   leader: "Derek Dyal"
   title: "Aggregated Treatment"
-  link: "TBD"
+  link: "NA"
 
 - semester: "Fall 2024"
   date: "2024-09-27"
   start-time: "2:00"
   end-time: "3:30"
   location: "Orkin D207"
-  leader: "TBD"
-  title: "TBD"
-  link: "TBD"
+  leader: "Brantly Callaway"
+  title: "Treatment Effects in Staggered Adoption Designs with Non-Parallel Trends"
+  link: "https://arxiv.org/abs/2308.02899"
 
 - semester: "Fall 2024"
   date: "2024-10-18"
