--- a/_data/seminars.yaml
+++ b/_data/seminars.yaml
@@ -11,8 +11,8 @@
   speaker: "Davide Viviano"
   affiliation: "Harvard University"
   host: "Brant Callaway"
-  title: "TBD"
-  link: "TBD"
+  title: "A Model of Multiple Hypothesis Testing"
+  link: "https://arxiv.org/abs/2104.13367"
   
 - semester: "Fall 2024"
   date: "2024-10-08"
