--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -159,3 +159,12 @@
   leader: "TBD"
   title: "TBD"
   link: "TBD"
+
+- semester: "Fall 2024"
+  date: "2024-12-05"
+  start-time: "2:00"
+  end-time: "3:30"
+  location: "Orkin D207"
+  leader: "TBD"
+  title: "TBD"
+  link: "TBD"
