--- a/_data/seminars.yaml
+++ b/_data/seminars.yaml
@@ -19,7 +19,7 @@
   speaker: "Xiaoxia Shi"
   affiliation: "University of Wisconsin-Madison"
   host: "Zhongjian Lin"
-  title: "TBD"
+  title: "Testing Inequalities Linear in Nuisance Parameters"
   link: "TBD"
 
 - semester: "Fall 2024"
@@ -27,8 +27,8 @@
   speaker: "Rodrigo Pinto"
   affiliation: "UCLA"
   host: "Greg Caetano"
-  title: "TBD"
-  link: "TBD"
+  title: "The Economics of Monotonicity Conditions: Exploring Choice Incentives in IV Models"
+  link: "https://www.rodrigopinto.net/_files/ugd/95d94d_7fb7289fbd5b443390e72c831e4bf320.pdf"
 
 - semester: "Fall 2024"
   date: "2024-10-29"
