--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -143,10 +143,10 @@
   link: "NA"
 
 - semester: "Fall 2024"
-  date: "2024-10-18"
-  start-time: "2:00"
-  end-time: "3:30"
-  location: "Orkin D207"
+  date: "2024-10-15"
+  start-time: "4:00"
+  end-time: "5:30"
+  location: "Benson C101"
   leader: "Brantly Callaway"
   title: "Treatment Effects in Staggered Adoption Designs with Non-Parallel Trends"
   link: "https://arxiv.org/abs/2308.02899"
