--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -156,7 +156,7 @@
   start-time: "2:00"
   end-time: "3:30"
   location: "Orkin D207"
-  leader: "TBD"
+  leader: "Derek Dyal"
   title: "TBD"
   link: "TBD"
 
