--- a/_data/seminars.yaml
+++ b/_data/seminars.yaml
@@ -35,8 +35,8 @@
   speaker: "Shakeeb Khan"
   affiliation: "Boston College"
   host: "Brant Callaway"
-  title: "TBD"
-  link: "TBD"
+  title: "Inference on High Dimensional Selective Labeling Models"
+  link: "https://cireqmontreal.com/wp-content/uploads/2024/09/khan.pdf"
 
 - semester: "Spring 2024"
   date: "2024-02-22"
