--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -157,8 +157,9 @@
   end-time: "3:30"
   location: "Orkin D207"
   leader: "Derek Dyal"
-  title: "TBD"
-  link: "TBD"
+  title: "Models of Heterogeneity for Factorial Data"
+  link: "https://www.nber.org/system/files/working_papers/w28726/w28726.pdf"
+  link: "https://arxiv.org/pdf/2404.02141"
 
 - semester: "Fall 2024"
   date: "2024-12-05"
