--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -159,6 +159,13 @@
   leader: "Derek Dyal"
   title: "Models of Heterogeneity for Factorial Data I"
   link: "https://www.nber.org/system/files/working_papers/w28726/w28726.pdf"
+
+- semester: "Fall 2024"
+  date: "2024-11-08"
+  start-time: "2:00"
+  end-time: "3:30"
+  location: "Orkin D207"
+  leader: "Derek Dyal"
   title: "Models of Heterogeneity for Factorial Data II"
   link: "https://arxiv.org/pdf/2404.02141"
 
