--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -173,7 +173,7 @@
   date: "2024-12-05"
   start-time: "2:00"
   end-time: "3:30"
-  location: "Orkin D207"
+  location: "Correll 442 DeVore Conference Room"
   leader: "TBD"
   title: "TBD"
   link: "TBD"
