--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -174,6 +174,6 @@
   start-time: "2:00"
   end-time: "3:30"
   location: "Correll 442 DeVore Conference Room"
-  leader: "TBD"
-  title: "TBD"
-  link: "TBD"
+  leader: "Zhongjian Lin"
+  title: "Identification and Estimation of Stochastic Bargaining Models (Merlo & Tang, Econometrica 2012)"
+  link: "https://onlinelibrary.wiley.com/doi/abs/10.3982/ECTA9167"
