--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -169,11 +169,38 @@
   title: "Models of Heterogeneity for Factorial Data II"
   link: "https://arxiv.org/pdf/2404.02141"
 
-- semester: "Fall 2024"
-  date: "2024-12-05"
-  start-time: "2:00"
-  end-time: "3:30"
-  location: "Correll 442 DeVore Conference Room"
-  leader: "Zhongjian Lin"
-  title: "Identification and Estimation of Stochastic Bargaining Models (Merlo & Tang, Econometrica 2012)"
-  link: "https://onlinelibrary.wiley.com/doi/abs/10.3982/ECTA9167"
+- semester: "Spring 2025"
+  date: "2025-05-02"
+  start-time: "12:00"
+  end-time: "1:30"
+  location: "Terry BLC A400 Boyd Conference Room"
+  leader: "TBD"
+  title: "TBD"
+  link: "---"
+
+- semester: "Spring 2025"
+  date: "2025-19-02"
+  start-time: "12:00"
+  end-time: "1:30"
+  location: "Terry BLC A400 Boyd Conference Room"
+  leader: "TBD"
+  title: "TBD"
+  link: "---"
+
+- semester: "Spring 2025"
+  date: "2025-12-03"
+  start-time: "12:00"
+  end-time: "1:30"
+  location: "Terry BLC A400 Boyd Conference Room"
+  leader: "TBD"
+  title: "TBD"
+  link: "---"
+
+- semester: "Spring 2025"
+  date: "2025-19-03"
+  start-time: "12:00"
+  end-time: "1:30"
+  location: "Terry BLC A400 Boyd Conference Room"
+  leader: "TBD"
+  title: "TBD"
+  link: "---"
