--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -174,9 +174,9 @@
   start-time: "12:00"
   end-time: "1:30"
   location: "Terry BLC A400 Boyd Conference Room"
-  leader: "TBD"
-  title: "TBD"
-  link: "---"
+  leader: "Brantly Callaway"
+  title: "Identification and Inference in Nonlinear Difference-inDifference Models"
+  link: "https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1468-0262.2006.00668.x"
 
 - semester: "Spring 2025"
   date: "2025-02-19"
