--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -179,13 +179,13 @@
   link: "https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1468-0262.2006.00668.x"
 
 - semester: "Spring 2025"
-  date: "2025-02-19"
-  start-time: "12:00"
-  end-time: "1:30"
-  location: "Terry BLC A400 Boyd Conference Room"
-  leader: "TBD"
+  date: "2025-02-24"
+  start-time: "11:10"
+  end-time: "12:30"
+  location: "Orkin Hall D207"
+  leader: "Emmanuel Tsyawo"
   title: "TBD"
-  link: "---"
+  link: "https://estsyawo.github.io/"
 
 - semester: "Spring 2025"
   date: "2025-03-12"
