--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -175,7 +175,7 @@
   end-time: "1:30"
   location: "Terry BLC A400 Boyd Conference Room"
   leader: "Brantly Callaway"
-  title: "Identification and Inference in Nonlinear Difference-inDifference Models"
+  title: "Identification and Inference in Nonlinear Difference-in-Difference Models"
   link: "https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1468-0262.2006.00668.x"
 
 - semester: "Spring 2025"
