--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -184,7 +184,7 @@
   end-time: "12:30"
   location: "Orkin Hall D207"
   leader: "Emmanuel Tsyawo"
-  title: "TBD"
+  title: "A Distance Covariance-based Estimator"
   link: "https://estsyawo.github.io/"
 
 - semester: "Spring 2025"
