--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -201,6 +201,6 @@
   start-time: "12:00"
   end-time: "1:30"
   location: "Terry BLC A400 Boyd Conference Room"
-  leader: "TBD"
-  title: "TBD"
-  link: "---"
+  leader: "Zhongjian Lin"
+  title: "Identification of Average Marginal Effects in Fixed Effects Dynamic Discrete Choice Models"
+  link: "https://arxiv.org/html/2107.06141v2"
