--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -204,3 +204,39 @@
   leader: "Zhongjian Lin"
   title: "Identification of Average Marginal Effects in Fixed Effects Dynamic Discrete Choice Models"
   link: "https://arxiv.org/html/2107.06141v2"
+
+- semester: "Fall 2025"
+  date: "2025-09-18"
+  start-time: "12:00"
+  end-time: "1:30"
+  location: "Correll 402 Glover Board Room"
+  leader: "TBA"
+  title: "TBA"
+  link: "TBA"
+
+- semester: "Fall 2025"
+  date: "2025-09-25"
+  start-time: "12:00"
+  end-time: "1:30"
+  location: "Correll 402 Glover Board Room"
+  leader: "TBA"
+  title: "TBA"
+  link: "TBA"
+
+- semester: "Fall 2025"
+  date: "2025-11-06"
+  start-time: "12:00"
+  end-time: "1:30"
+  location: "Correll 402 Glover Board Room"
+  leader: "TBA"
+  title: "TBA"
+  link: "TBA"
+
+- semester: "Fall 2025"
+  date: "2025-11-13"
+  start-time: "12:00"
+  end-time: "1:30"
+  location: "Correll 402 Glover Board Room"
+  leader: "TBA"
+  title: "TBA"
+  link: "TBA"
