--- a/_data/seminars.yaml
+++ b/_data/seminars.yaml
@@ -1,3 +1,35 @@
+- semester: "Spring 2025"
+  date: "2024-04-15"
+  speaker: "Hao Dong"
+  affiliation: "Southern Methodist University"
+  host: "Brantly Callaway"
+  title: "Estimating Density-weighted Average Derivative under Measurement Error"
+  link: "https://arxiv.org/pdf/2209.05914"
+
+- semester: "Spring 2025"
+  date: "2024-04-08"
+  speaker: "Andres Santos"
+  affiliation: "UCLA"
+  host: "Carol Caetano"
+  title: "Identification and Estimation in a Class of Potential Outcomes Models"
+  link: "http://www.econ.ucla.edu/andres/pdfs/PotOutcomes.pdf"
+
+- semester: "Spring 2025"
+  date: "2024-04-01"
+  speaker: "Rodrigo Pinto"
+  affiliation: "University of Southern Florida"
+  host: "Carol Caetano"
+  title: "The Economics of Monotonicity Conditions: Exploring Choice Incentives in IV Models"
+  link: "https://www.rodrigopinto.net/_files/ugd/95d94d_2f83dc6ff5a947ec976df1e32fdd0b15.pdf"
+
+- semester: "Spring 2025"
+  date: "2024-02-18"
+  speaker: "Jeffrey Smith"
+  affiliation: "University of Wisconsin-Madison"
+  host: ""
+  title: "Quantifying Non-Sampling Variation: College Quality and the Garden of Forking Paths"
+  link: ""
+
 - semester: "Fall 2024"
   date: "2024-09-24"
   speaker: "Yulong Wang"
