--- a/_data/seminars.yaml
+++ b/_data/seminars.yaml
@@ -1,10 +1,26 @@
 - semester: "Fall 2025"
+  date: "2025-12-02"
+  speaker: "Victor Aguirregabiria"
+  affiliation: "University of Toronto"
+  host: "Carol Caetano"
+  title: ""
+  link: "https://sites.google.com/view/victoraguirregabiriaswebsite/home"
+
+- semester: "Fall 2025"
   date: "2025-10-21"
   speaker: "Marcelo Moreira"
   affiliation: "FGV School of Economics"
   host: "Carol Caetano"
   title: ""
   link: "https://sites.google.com/site/moreiramarceloj/"
+
+ - semester: "Fall 2025"
+  date: "2025-10-14"
+  speaker: "Francesco Agostinelli"
+  affiliation: "University of Pennsylvania"
+  host: "Carol Caetano"
+  title: ""
+  link: "https://www.francesco-agostinelli.com/"
 
 - semester: "Fall 2025"
   date: "2025-09-02"
