--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -219,7 +219,7 @@
   start-time: "12:00"
   end-time: "1:30"
   location: "Correll 402 Glover Board Room"
-  leader: "TBA"
+  leader: "Henry Downes"
   title: "TBA"
   link: "TBA"
 
