--- a/_data/seminars.yaml
+++ b/_data/seminars.yaml
@@ -3,7 +3,7 @@
   speaker: "Victor Aguirregabiria"
   affiliation: "University of Toronto"
   host: "Carol Caetano"
-  title: ""
+  title: "NA"
   link: "https://sites.google.com/view/victoraguirregabiriaswebsite/home"
 
 - semester: "Fall 2025"
@@ -11,7 +11,7 @@
   speaker: "Marcelo Moreira"
   affiliation: "FGV School of Economics"
   host: "Carol Caetano"
-  title: ""
+  title: "NA"
   link: "https://sites.google.com/site/moreiramarceloj/"
 
  - semester: "Fall 2025"
@@ -19,7 +19,7 @@
   speaker: "Francesco Agostinelli"
   affiliation: "University of Pennsylvania"
   host: "Carol Caetano"
-  title: ""
+  title: "NA"
   link: "https://www.francesco-agostinelli.com/"
 
 - semester: "Fall 2025"
