--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -221,7 +221,7 @@
   location: "Correll 402 Glover Board Room"
   leader: "Henry Downes"
   title: "TBA"
-  link: "TBA"
+  link: "https://henrymdownes.com/index.html"
 
 - semester: "Fall 2025"
   date: "2025-11-06"
