--- a/_data/seminars.yaml
+++ b/_data/seminars.yaml
@@ -2,7 +2,7 @@
   date: "2025-12-02"
   speaker: "Victor Aguirregabiria"
   affiliation: "University of Toronto"
-  host: "Carol Caetano"
+  host: "Zhongjian Lin"
   title: "NA"
   link: "https://sites.google.com/view/victoraguirregabiriaswebsite/home"
 
@@ -18,7 +18,7 @@
   date: "2025-10-14"
   speaker: "Francesco Agostinelli"
   affiliation: "University of Pennsylvania"
-  host: "Carol Caetano"
+  host: "Greg Caetano"
   title: "NA"
   link: "https://www.francesco-agostinelli.com/"
 
