--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -210,9 +210,9 @@
   start-time: "12:00"
   end-time: "1:30"
   location: "Correll 402 Glover Board Room"
-  leader: "TBA"
-  title: "TBA"
-  link: "TBA"
+  leader: "Derek Dyal"
+  title: "Heterogeneity Analysis with Heterogeneous Treatments"
+  link: "https://arxiv.org/pdf/2507.01517"
 
 - semester: "Fall 2025"
   date: "2025-09-25"
