--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -220,7 +220,7 @@
   end-time: "1:30"
   location: "Correll 402 Glover Board Room"
   leader: "Henry Downes"
-  title: "TBA"
+  title: "Shift-share IV"
   link: "https://henrymdownes.com/index.html"
 
 - semester: "Fall 2025"
