--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -232,11 +232,38 @@
   title: "Difference-in-differences with Bad Controls"
   link: "https://hsantanna.org/workingpapers/badcontrols"
 
-- semester: "Fall 2025"
-  date: "2025-11-13"
-  start-time: "12:00"
-  end-time: "1:30"
-  location: "Correll 402 Glover Board Room"
+- semester: "Sping 2026"
+  date: "2026-02-13"
+  start-time: "11:00"
+  end-time: "12:30"
+  location: "Ivester Hall E007"
+  leader: "TBA"
+  title: "TBA"
+  link: "TBA"
+
+- semester: "Sping 2026"
+  date: "2026-02-20"
+  start-time: "11:00"
+  end-time: "12:30"
+  location: "Ivester Hall E007"
+  leader: "TBA"
+  title: "TBA"
+  link: "TBA"
+
+- semester: "Sping 2026"
+  date: "2026-02-27"
+  start-time: "11:00"
+  end-time: "12:30"
+  location: "Ivester Hall E007"
+  leader: "TBA"
+  title: "TBA"
+  link: "TBA"
+
+- semester: "Sping 2026"
+  date: "2026-03-20"
+  start-time: "11:00"
+  end-time: "12:30"
+  location: "Ivester Hall E007"
   leader: "TBA"
   title: "TBA"
   link: "TBA"
