--- a/_data/seminars.yaml
+++ b/_data/seminars.yaml
@@ -1,3 +1,35 @@
+- semester: "Spring 2026"
+  date: "2026-02-04"
+  speaker: "TBA"
+  affiliation: "TBA"
+  host: "TBA"
+  title: "NA"
+  link: "NA"
+
+- semester: "Spring 2026"
+  date: "2026-02-03"
+  speaker: "TBA"
+  affiliation: "TBA"
+  host: "TBA"
+  title: "NA"
+  link: "NA"
+
+- semester: "Spring 2026"
+  date: "2026-02-02"
+  speaker: "TBA"
+  affiliation: "TBA"
+  host: "TBA"
+  title: "NA"
+  link: "NA"
+
+- semester: "Spring 2026"
+  date: "2026-02-01"
+  speaker: "TBA"
+  affiliation: "TBA"
+  host: "TBA"
+  title: "NA"
+  link: "NA"
+
 - semester: "Fall 2025"
   date: "2025-12-02"
   speaker: "Victor Aguirregabiria"
