--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -232,7 +232,7 @@
   title: "Difference-in-differences with Bad Controls"
   link: "https://hsantanna.org/workingpapers/badcontrols"
 
-- semester: "Sping 2026"
+- semester: "Spring 2026"
   date: "2026-02-13"
   start-time: "11:00"
   end-time: "12:30"
@@ -241,7 +241,7 @@
   title: "TBA"
   link: "TBA"
 
-- semester: "Sping 2026"
+- semester: "Spring 2026"
   date: "2026-02-20"
   start-time: "11:00"
   end-time: "12:30"
@@ -250,7 +250,7 @@
   title: "TBA"
   link: "TBA"
 
-- semester: "Sping 2026"
+- semester: "Spring 2026"
   date: "2026-02-27"
   start-time: "11:00"
   end-time: "12:30"
@@ -259,7 +259,7 @@
   title: "TBA"
   link: "TBA"
 
-- semester: "Sping 2026"
+- semester: "Spring 2026"
   date: "2026-03-20"
   start-time: "11:00"
   end-time: "12:30"
