--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -234,8 +234,8 @@
 
 - semester: "Spring 2026"
   date: "2026-02-13"
-  start-time: "11:00"
-  end-time: "12:30"
+  start-time: "11:00AM"
+  end-time: "12:30PM"
   location: "Ivester Hall E007"
   leader: "TBA"
   title: "TBA"
