--- a/_data/erg.yaml
+++ b/_data/erg.yaml
@@ -237,7 +237,7 @@
   start-time: "11:00AM"
   end-time: "12:30PM"
   location: "Ivester Hall E007"
-  leader: "TBA"
+  leader: "Derek Dyal"
   title: "TBA"
   link: "TBA"
 
@@ -246,7 +246,7 @@
   start-time: "11:00AM"
   end-time: "12:30PM"
   location: "Ivester Hall E007"
-  leader: "TBA"
+  leader: "Brantly Callaway"
   title: "TBA"
   link: "TBA"
 
